Solve the coin change problem set